[workspace]
resolver = "2"


members = [
    "core",

    "acceptors/tcp",
    "inbounds/tls", "inbounds/http",
    # "sources/dns",
    # "sources/https",
    # "upstream/direct",
    # "upstream/reject",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
hyper = "1.5.1"
hyper-util = "0.1.0"
http-body-util = "0.1.0"
tokio = "1.39.0"
http = "1.2.0"

tokio-rustls = "0.26.0"
rustls-pemfile = "2.0.0"

anyhow = "1.0.90"

log = "0.4.20"
env_logger = "0.11.0"

hhaven-core = { path = "core", version = "0.1.0" }

hhaven-acceptor-tcp = { path = "acceptors/tcp", version = "0.1.0" }

hhaven-inbound-tls = { path = "inbounds/tls", version = "0.1.0" }
