[workspace]
resolver = "2"

members = ["core", "dns", "haven"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
async-trait = "0.1.85"
anyhow = "1.0.91"

tokio = "1.39.0"

tracing = "0.1.41"
tracing-subscriber = "0.3.19"

hickory-server = "0.24.2"
sqlx = { version = "0.8.1", features = ["postgres", "runtime-tokio"] }
