[workspace]
resolver = "2"

members = [
    "plugin/core",
    "dns",
    "haven",
    "plugin/plugins/reject",
    "plugin/plugins/direct",
    "plugin/loader",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
async-trait = "0.1.85"
anyhow = "1.0.91"

tokio = "1.39.0"

tracing = "0.1.41"
tracing-subscriber = "0.3.19"

hickory-server = "0.24.2"
sqlx = { version = "0.8.1", features = ["postgres", "runtime-tokio"] }

mini-moka = "0.10.3"

serde = { version = "1.0.200", features = ["derive"] }
toml = "0.8.19"

dlopen = "0.1.8"

hhaven-plugin = { path = "plugin/core" }
