[package]
name = "hhaven-acceptor-tcp"
version.workspace = true
edition.workspace = true

[dependencies]
hhaven-core = { workspace = true }
anyhow = { workspace = true }

tokio = { workspace = true, features = ["net"] }

log = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
