[package]
name = "hhaven-inbound-tls"
version.workspace = true
edition.workspace = true

[dependencies]
tokio-rustls = { workspace = true }
tokio = { workspace = true, features = ["sync"] }

hhaven-core = { workspace = true }

anyhow = { workspace = true }

rustls-pemfile = { workspace = true }

log = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

hhaven-acceptor-tcp = { workspace = true }
