[package]
name = "hhaven-source-https"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
tokio = { workspace = true, features = ["macros", "rt", "net", "fs"] }
hyper = { workspace = true }
hyper-util = { workspace = true, features = [
    "tokio",
    "server",
    "http1",
    "http2",
] }
http-body-util = { workspace = true }

anyhow = { workspace = true }
log = { workspace = true }

tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }

hhaven-core = { workspace = true }
[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
env_logger = { workspace = true }
